<resources>
    <string name="app_name">Calculate</string>
    <string name="button_mr">MR</string>
    <string name="button_ms">MS</string>
    <string name="button_mc">MC</string>
    <string name="button_m_plus">M+</string>
    <string name="button_m_minus">M-</string>
    <string name="button_clear">C</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_divide">÷</string>
    <string name="button_multiply">*</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_equal">=</string>
    <string name="button_comma">.</string>
    <!--    <string name="button_plus_minus">±</string>-->
    <!--<string name="button_percent">%</string>-->
    <string name="button_percent">M*</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="choosing_a_calculator_theme">CHOOSING A CALCULATOR THEME</string>
</resources>