<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_main_screen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/filiphine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/weight_main_total"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@integer/weight_main_out"
                android:gravity="center|right"
                android:textColor="@color/white"
                android:textSize="@dimen/place_number"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/place_memory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@integer/weight_memory_out"
                android:textColor="@color/white"
                android:textSize="@dimen/memory_text" />
        </LinearLayout>

        <LinearLayout style="@style/ButtonsRowTitle">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_m_plus"
                style="@style/NumberButtonStyle.Functional"
                android:text="@string/button_m_plus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_m_minus"
                style="@style/NumberButtonStyle.Functional"
                android:text="@string/button_m_minus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus_minus"
                style="@style/NumberButtonStyle.Functional"
                android:text="@string/button_plus_minus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_m_clear"
                style="@style/NumberButtonStyle.Functional.Clear"
                android:text="@string/button_clear" />
        </LinearLayout>

        <LinearLayout style="@style/ButtonsRowTitle">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_mr"
                style="@style/NumberButtonStyle.Functional"
                android:text="@string/button_mr" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ms"
                style="@style/NumberButtonStyle.Functional"
                android:text="@string/button_ms" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_mc"
                style="@style/NumberButtonStyle.Functional"
                android:text="@string/button_mc" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percent"
                style="@style/NumberButtonStyle.Functional"
                android:text="@string/button_percent" />
        </LinearLayout>

        <LinearLayout style="@style/ButtonsRowTitle.Number">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/NumberButtonStyle"
                android:text="@string/button_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/NumberButtonStyle"
                android:text="@string/button_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/NumberButtonStyle"
                android:text="@string/button_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/NumberButtonStyle.Operation"
                android:text="@string/button_divide" />
        </LinearLayout>

        <LinearLayout style="@style/ButtonsRowTitle.Number">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/NumberButtonStyle"
                android:text="@string/button_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/NumberButtonStyle"
                android:text="@string/button_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/NumberButtonStyle"
                android:text="@string/button_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/NumberButtonStyle.Operation"
                android:text="@string/button_multiply" />
        </LinearLayout>

        <LinearLayout style="@style/ButtonsRowTitle.Number">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/NumberButtonStyle"
                android:text="@string/button_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/NumberButtonStyle"
                android:text="@string/button_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/NumberButtonStyle"
                android:text="@string/button_3"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/NumberButtonStyle.Operation"
                android:text="@string/button_minus" />
        </LinearLayout>

        <LinearLayout style="@style/ButtonsRowTitle.Number">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/NumberButtonStyle"
                android:text="@string/button_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_comma"
                style="@style/NumberButtonStyle"
                android:text="@string/button_comma" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/NumberButtonStyle.Operation"
                android:text="@string/button_equal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/NumberButtonStyle.Operation"
                android:text="@string/button_plus" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>


