<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@color/calc_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="80sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_row"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_m_plus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_m_plus"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_m_minus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_m_minus"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_percent"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:backgroundTint="@color/btn_function"
            android:text="@string/button_percent"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_m_clear"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:backgroundTint="@color/btn_red_clear"
            android:text="@string/button_clear"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_row"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_mr"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_mr"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_ms"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_ms"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_mc"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_mc"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_plus_minus"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_row"
        android:layout_marginBottom="@dimen/margin_row"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_7"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_8"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:backgroundTint="@color/btn_number"
            android:text="@string/button_9"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_divide"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_size_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_row"
        android:layout_marginBottom="@dimen/margin_row"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_4"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_5"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_6"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:backgroundTint="@color/btn_function"
            android:text="@string/button_multiply"
            android:textSize="@dimen/button_size_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_row"
        android:layout_marginBottom="@dimen/margin_row"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_1"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_2"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_3"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_minus"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_size_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_row"
        android:layout_marginBottom="@dimen/margin_row"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_0"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_comma"
            android:backgroundTint="@color/btn_number"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_equal"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_size_number" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_weight="4"
            android:text="@string/button_plus"
            android:backgroundTint="@color/btn_function"
            android:textSize="@dimen/button_size_number" />
    </LinearLayout>
</LinearLayout>


